Fix up primitive double tests.